k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-master-pro
  labels:
    app: quiz-master-pro
spec:
  type: NodePort
  selector:
    app: quiz-master-pro
  ports:
    - name: http
      protocol: TCP
      port: 80          # Service port (internal cluster port)
      targetPort: 80    # Container port (nginx listens here)
      nodePort: 30080   # External NodePort (accessible on any cluster node)
